force-app/main/default/objects/Loyalty_Gifts__c/Loyalty_Gifts__c.object-meta.xml
<CustomObject>
    <description>Information specific to each referrer, pertaining to the Loyalty Program</description>
    <label>Loyalty Gifts</label>
    <nameField>
        <displayFormat>{000000}</displayFormat>
        <label>Loyalty Gifts</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Loyalty Gifts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>