force-app/main/default/objects/Loyalty_Gifts__c/fields/Date_Gift_Sent__c.field-meta.xml
<CustomField>
    <fullName>Date_Gift_Sent__c</fullName>
    <description>The date we sent the gift to the rep.</description>
    <inlineHelpText>What date was the gift sent to the rep?</inlineHelpText>
    <label>Date Gift Sent</label>
    <type>Date</type>
</CustomField>