force-app/main/default/objects/Loyalty_Gifts__c/fields/Gift__c.field-meta.xml
<CustomField>
    <fullName>Gift__c</fullName>
    <description>This is the gift provided.</description>
    <inlineHelpText>Which gift was provided based on the referral?</inlineHelpText>
    <label>Gift</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Grinder</fullName>
            </value>
            <value>
                <fullName>Coffee</fullName>
            </value>
            <value>
                <fullName>T-Shirt</fullName>
            </value>
            <value>
                <fullName>Fleece</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>