force-app/main/default/objects/Loyalty_Gifts__c/fields/Gift_Level__c.field-meta.xml
<CustomField>
    <fullName>Gift_Level__c</fullName>
    <description>This pertains to the stage the referred opportunity reached.</description>
    <inlineHelpText>Which level gift is this?</inlineHelpText>
    <label>Gift Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Level 1</fullName>
            </value>
            <value>
                <fullName>Level 2</fullName>
            </value>
            <value>
                <fullName>Level 3</fullName>
            </value>
            <value>
                <fullName>Level 4</fullName>
            </value>
            <value>
                <fullName>Level 5</fullName>
            </value>
            <value>
                <fullName>Level 6</fullName>
                <isActive>false</isActive>
                <label>Level 6</label>
            </value>
            <value>
                <fullName>Level 7</fullName>
                <isActive>false</isActive>
                <label>Level 7</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>