force-app/main/default/objects/Loyalty_Gifts__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <description>The opportunity this referral relates to.</description>
    <inlineHelpText>Which opportunity does this referral gift relate to?</inlineHelpText>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Loyalty Gifts</relationshipLabel>
    <relationshipName>Loyalty_Program</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>